<resources>
    <string name="app_name">Clases</string>
    <string name="bt_mapas">Ver Mapas</string>
    <string name="bt_agegar_clases">Agregar</string>
    <string name="tv_titulo_clases">Clases:</string>
    <string name="tv_nombre_alumno">Datos:</string>
    <string name="tv_nombre">Nombre:</string>
    <string name="et_hint_nombre">Nombre</string>
    <string name="et_hint_curso" >Curso</string>
    <string name="tv_curso">Curso:</string>
    <string name="tv_fecha">Fecha:</string>
    <string name="et_hint_fecha">Fecha</string>
    <string name="tv_hora">Hora:</string>
    <string name="et_hint_hora">Hora</string>
    <string name="tv_Direccion">Dirección:</string>
    <string name="bt_marcar_mapa">Ir al Mapa</string>
    <string name="tv_direccion_final">Dirección final:</string>
    <string name="et_direccion_final">vacio</string>
    <string name="tv_latitud">Latitud:</string>
    <string name="tv_longitud">Longitud</string>
    <string name="bt_registrar">Registrar</string>
    <string name="et_direccion_escogido">Direccion</string>
    <string name="bt_modificar">Modificar</string>
    <string name="bt_eliminar">Eliminar</string>
    <string name="tvm_direccion_a_buscar">Escriba la dirección a buscar:</string>
    <string name="etm_direccion">Dirección</string>
    <string name="bt_buscar" >Buscar</string>
    <string name="btm_aceptar">Aceptar</string>
    <string name="service_not_available">Problemas en el Flujo de Datos</string>
    <string name="invalid_lat_long_used">Argumento ilegal</string>
    <string name="direccion_no_encontrada">Dirección no Encontrada</string>
    <string name="direccion_encontrada">Localizada la Dirección</string>
    <string name="tv_id">id</string>
    <string name="tvF_agregar_foto">Agregar foto...</string>
    <string name="bt_agregar_foto">Foto</string>
    <string name="tv_direccion_almacenamiento">""</string>
    <string name="widget_clases">CLASES</string>
    <string name="no_clases">\"Sin Clases\"</string>
    <string name="presentacion">Usuarios: \n\nProgramación de las clases. Agregue, modifique o elimine estas. </string>
    <string name="mensaje_dialogo_camara">Escoja el origen de la foto</string>
    <string name="agregar_foto">Agregar Foto</string>
    <string name="nombre_boton_positivo_dialogo_camara">Cámara</string>
    <string name="no">No</string>
    <string name="nombre_boton_neutral_dialogo_camara">Galería</string>
    <string name="toast_error_de_campos">Hay campos aún sin llenar</string>
    <string name="foto_guardada">Foto Capturada</string>
    <string name="error_foto">¡No se ha podido guardar la imagen!</string>
    <string name="problema_direccion">Problema en la dirección</string>
    <string name="busqueda_interrumpida">Se ha interrumpido la búsqueda</string>
    <string name="problemas_ejecución">Problemas en la ejecución</string>
    <string name="no_localizada">No localizada la dirección</string>
    <string name="si">Si</string>
    <string name="pregunta_eliminar">"¿Desea Eliminar la clase con este alumno?"</string>
    <string name="existen_campos_vacios">Existen campos vacíos por llenar</string>

</resources>
