<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#8093b7"
        android:id="@+id/barra_tarea4"
        app:titleTextColor="#FFFFFF"
        android:titleTextColor="#FFFFFF"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>

    <TextView
        android:text="@string/tvm_direccion_a_buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/barra_tarea4"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tvm_mapa_bienvenida" />

    <EditText
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:lines="1"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:ems="10"
        android:layout_below="@+id/tvm_mapa_bienvenida"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/editText"
        android:hint="@string/etm_direccion"
        android:layout_toLeftOf="@+id/btm_buscar"
        android:layout_toStartOf="@+id/btm_buscar"
        android:layout_alignBottom="@+id/btm_buscar" />

    <Button
        android:text="@string/bt_buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvm_mapa_bienvenida"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/btm_buscar" />

    <Button
        android:text="@string/btm_aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/btm_aceptar" />

    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/fragment"
        android:layout_above="@+id/btm_aceptar" />


</RelativeLayout>