<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.masterd.android.app.clases.com.masterd.android.app.Principal">
    
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#8093b7"
        android:id="@+id/barra_tarea"
        app:titleTextColor="#FFFFFF"
        android:titleTextColor="#FFFFFF"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barra_tarea"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="12sp"
        android:id="@+id/bt_mapas"
        android:text="@string/bt_mapas"
        android:layout_alignBottom="@+id/bt_agregar_clases" />

    <Button
        android:text="@string/bt_agegar_clases"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barra_tarea"
        android:layout_toLeftOf="@+id/bt_mapas"
        android:layout_toStartOf="@+id/bt_mapas"
        android:id="@+id/bt_agregar_clases"
        android:elevation="0dp" />

    <TextView
        android:text="@string/tv_titulo_clases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textColor="#000000"
        android:id="@+id/tv_titulo_clases"
        android:layout_alignBaseline="@+id/bt_agregar_clases"
        android:layout_alignBottom="@+id/bt_agregar_clases"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lista_clases"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_below="@+id/bt_mapas"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
